--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/posts/[id].jsx"  ],
+, "pages/posts/[id].tsx", "pages/_document.tsx"  ],
   "exclude": [
     "node_modules"
   ]
