--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint components pages -c .eslintrc --ext .ts,.tsx,.js,.jsx",
+    "format": "prettier --write components pages",
+    "isready": "npm run format && npm run lint && npm run build"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -17,9 +20,25 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/node": "^16.11.9",
     "@types/react": "^17.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1",
     "typescript": "^4.5.0"
   }
 }
